--- a/src/pages/mobile/home/index.scss
+++ b/src/pages/mobile/home/index.scss
@@ -265,7 +265,7 @@
       border-radius: 10px;
       padding: 10px;
       position: relative;
-      top: 30%;
+      top: 20%;
       .h3 {
         text-align: center;
         font-size: 15px;
@@ -288,13 +288,8 @@
     }
   }
 
-  .footer-btn.fixed {
-    position: fixed;
-    bottom: 10px;
-    width: 90%;
-  }
 
-  .model-footer-btn {
+  .footer-btn {
     margin-top: 20px;
     display: flex;
     flex-direction: row;
@@ -321,10 +316,12 @@
       height: 40px;
       border-radius: 3px;
       background: rgba(218, 41, 28, 1);
-      img {
+      .img {
         position: relative;
         top: 6px;
         margin-right: 5px;
+        width: 20px !important;
+        height: 20px !important;
       }
     }
     .privacy {
@@ -346,35 +343,9 @@
       }
     }
   }
-
-  .footer-btn {
-    margin-top: 20px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    padding-bottom: 20px;
-
-    .btn-large{
-      width: 93%;
-      margin: 0 auto;
-      text-align: center;
-      height: 45px;
-      background: rgba(218, 41, 28, 1);
-      color: #ffffff;
-      line-height: 45px;
-      border-radius: 3px;
-    }
-    .btn-mid {
-      margin-top: 10px;
-      width: 43%;
-      text-align: center;
-      border: 1px solid rgba(218, 41, 28, 1);
-      color: rgba(218, 41, 28, 1);
-      line-height: 45px;
-      height: 45px;
-      border-radius: 3px;
-      background: #ffffff;
-    }
+  .footer-btn.fixed {
+    position: fixed;
+    bottom: 10px;
+    width: 90%;
   }
 }
