--- a/src/pages/mobile/list-h5/index.scss
+++ b/src/pages/mobile/list-h5/index.scss
@@ -7,13 +7,16 @@
   }
   .chose {
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     flex-direction: row;
     justify-content: left;
     position: relative;
     font-size: 13px;
     padding-top: 10px;
     height: 30px;
+    padding-right: 80px;
+    overflow-y: scroll;
+    height: 35px;
     .chose-item {
       height: 20px;
       line-height: 20px;
@@ -22,6 +25,7 @@
       padding: 5px 8px;
       background: #ffffff;
       margin-left: 10px;
+      flex-shrink:0;
       img {
         position: relative;
         top: 3px;
@@ -29,11 +33,12 @@
       }
     }
     .clear{
-      height: 20px;
+      height: 35px;
       line-height: 20px;
-      position: absolute;
-      right: 10px;
-
+      position: fixed;
+      right: 0px;
+      padding-right: 10px;
+      background: #f5f5f5;
       img{
         position: relative;
         top: 4px;
