--- a/src/pages/mobile/list-h5/index.scss
+++ b/src/pages/mobile/list-h5/index.scss
@@ -86,6 +86,7 @@
         text-align: center;
         font-size: 13px;
         padding-bottom: 10px;
+        margin-top: 10px;
       }
     }
     .info {
