fix: 各种问题提测前验证修改

--- a/src/pages/web/product/index.scss
+++ b/src/pages/web/product/index.scss
@@ -4,6 +4,13 @@
   }
 }
 
+.wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+}
+
 :deep(.van-pagination__item){
   cursor: default !important;
   button {
