fix: 图片路径修正为网络路径

--- a/src/pages/web/product/index.scss
+++ b/src/pages/web/product/index.scss
@@ -56,7 +56,7 @@
   }
 }
 .content {
-  background: url("../../../static/img/background.png") no-repeat;
+  background: url("https://uat.cs.cummins.com.cn/doem-h5/static/img/background.png") no-repeat;
   background-size: 100% 100%;
   height: 100vh;
   .uni-slider-handle {
