--- a/src/pages/mobile/list-h5/index.scss
+++ b/src/pages/mobile/list-h5/index.scss
@@ -1,7 +1,7 @@
 .content {
   background:#efefef;
   .bg {
-    background: url("../../../static/img/background.png") no-repeat;
+    background: url("https://uat.cs.cummins.com.cn/doem-h5/static/img/background.png") no-repeat;
     background-size: 100% 100%;
     height: 100vh;
   }
@@ -131,7 +131,7 @@
       }
     }
     .right-top {
-      background: url("../../../static/img/top-right.png");
+      background: url("https://uat.cs.cummins.com.cn/doem-h5/static/img/top-right.png");
       background-size: 100% 100%;
       position: absolute;
       width: 100px;
@@ -143,7 +143,7 @@
       color: #ffffff;
     }
     .detail-btn {
-      background: url("../../../static/img/detail-btn.png");
+      background: url("https://uat.cs.cummins.com.cn/doem-h5/static/img/detail-btn.png");
       background-size: 100% 100%;
       position: absolute;
       width: 93px;
