fix: 修正部分联调问题

--- a/src/pages/web/detail/index.scss
+++ b/src/pages/web/detail/index.scss
@@ -68,7 +68,8 @@
       width: 35%;
       text-align: center;
       img {
-        margin-top: 20px;
+        width: 80%;
+        margin: 20px auto;
       }
     }
     .detail-right {
