--- a/src/pages/web/home/index.scss
+++ b/src/pages/web/home/index.scss
@@ -151,6 +151,9 @@
       >img,.image {
         width: 90%;
       }
+      .prod-img {
+        height: 200px;
+      }
     }
     .prod-info{
       text-align: left;
