--- a/src/pages/web/product/index.scss
+++ b/src/pages/web/product/index.scss
@@ -116,6 +116,9 @@
         >img,.image {
           width: 100%;
         }
+        .prod-img {
+          height: 200px;
+        }
       }
       .prod-info{
         text-align: left;
