--- a/src/pages/web/detail/index.scss
+++ b/src/pages/web/detail/index.scss
@@ -67,9 +67,17 @@
     .detail-left {
       width: 35%;
       text-align: center;
-      img {
-        width: 80%;
+      .swiper-box {
+        width: 90%;
+        height: 90%;
         margin: 20px auto;
+        .swiper-item {
+          width: 100%;
+          height: 100%;
+        }
+        img {
+          height: 100%;
+        }
       }
     }
     .detail-right {
@@ -293,7 +301,7 @@
     }
     @keyframes hide{
       to {
-        bottom: -80%;
+        bottom: -90%;
         opacity: 0;
       }
     }
@@ -303,7 +311,7 @@
     .info-part {
       background: #ffffff;
       position: absolute;
-      bottom: -80%;
+      bottom: -90%;
       height: 600px;
       .active {
         animation:show .5s forwards;
@@ -352,13 +360,13 @@
 
       @keyframes show{
         to {
-          bottom: 20%;
+          bottom: 10%;
           opacity: 1;
         }
       }
       @keyframes hide{
         to {
-          bottom: -80%;
+          bottom: -90%;
           opacity: 0;
         }
       }
