--- a/src/pages/mobile/filter-h5/index.scss
+++ b/src/pages/mobile/filter-h5/index.scss
@@ -61,8 +61,9 @@
   }
   .btn-box {
     width: 90%;
-    margin: 0 auto;
-    margin-top: 20px;
+    position: fixed;
+    bottom: 50px;
+    margin-left: 5%;
   }
 
   .scenarios {
