--- a/src/pages/web/detail/index.scss
+++ b/src/pages/web/detail/index.scss
@@ -332,7 +332,7 @@ ul {
           padding: 15px;
           margin-top: 10px;
           .img-box {
-            width: 20%;
+            width: 50px;
             img {
               height: 40px;
               width: 40px;
