--- a/src/pages/web/home/index.scss
+++ b/src/pages/web/home/index.scss
@@ -364,7 +364,7 @@
           padding: 15px;
           margin-top: 10px;
           .img-box {
-            width: 20%;
+            width: 50px;
             img {
               height: 40px;
               width: 40px;
