--- a/src/pages/mobile/filter-h5/index.scss
+++ b/src/pages/mobile/filter-h5/index.scss
@@ -2,6 +2,9 @@
   background: url("https://uat.cs.cummins.com.cn/doem-h5/static/img/background.png") no-repeat;
   background-size: 100% 100%;
   height: 100vh;
+  overflow-y: scroll;
+  overflow-x: hidden;
+
   .uni-slider-handle {
     z-index: 999;
   }
@@ -73,6 +76,7 @@
     flex-wrap: wrap;
     flex-direction: row;
     justify-content: left;
+    overflow: hidden;
     .device {
       width: 26%;
       border: 1px solid #efefef;
