--- a/src/pages/mobile/home/index.scss
+++ b/src/pages/mobile/home/index.scss
@@ -28,7 +28,7 @@
     .p {
       position: absolute;
       right: 10px;
-      bottom: 10px;
+      bottom: 30px;
       color: #666;
       width: 50%;
       font-size: 12px;
@@ -82,6 +82,7 @@
     flex-direction: row;
     justify-content: left;
     flex-wrap: wrap;
+
     image,img {
       width: 100%;
     }
@@ -317,11 +318,11 @@
       width: 43%;
       text-align: center;
       border: 1px solid rgba(218, 41, 28, 1);
-      color: #fff;
+      color: rgba(218, 41, 28, 1);
       line-height: 40px;
       height: 40px;
       border-radius: 3px;
-      background: rgba(218, 41, 28, 1);
+      background: #ffffff;
       font-size: 16px;
       .img {
         position: relative;
@@ -329,6 +330,7 @@
         margin-right: 5px;
         width: 20px !important;
         height: 20px !important;
+        filter: red;
       }
     }
     .privacy {
