--- a/src/pages/mobile/list-h5/index.scss
+++ b/src/pages/mobile/list-h5/index.scss
@@ -102,6 +102,7 @@
           img {
             position: relative;
             top: 3px;
+            width: 15px;
           }
         }
       }
