--- a/src/pages/web/detail/index.scss
+++ b/src/pages/web/detail/index.scss
@@ -4,6 +4,13 @@
   }
 }
 
+
+:deep(.uni-swiper-dot){
+  width: 12px !important;
+  height: 3px;
+  border-radius: 3px;
+}
+
 ul {
   list-style: disc !important;
 }
@@ -60,7 +67,7 @@ ul {
     height: 100%;
   }
   .detail-info {
-    padding: 10px 150px;
+    padding: 10px 130px;
     margin: 0 auto;
     background: #ffffff;
     border-radius: 6px;
@@ -69,7 +76,7 @@ ul {
     justify-content: space-around;
     flex-wrap: wrap;
     .detail-left {
-      width: 35%;
+      width: 30%;
       text-align: center;
       .swiper-box {
         width: 90%;
@@ -80,12 +87,12 @@ ul {
           height: 100%;
         }
         img {
-          height: 100%;
+          height: 90%;
         }
       }
     }
     .detail-right {
-      width: 65%;
+      width: 70%;
       h3 {
         position: relative;
       }
@@ -167,10 +174,9 @@ ul {
   }
   .detail-para {
     margin-top: 10px;
-
     h3 {
       border-top: 1px solid #efefef;
-      padding-top: 10px;
+      padding-top: 15px;
       width: 100%;
       font-size: 15px;
     }
@@ -222,7 +228,7 @@ ul {
         font-style: normal;
       }
       >span {
-        margin-left: 40px;
+        margin-left: 20px;
       }
     }
   }
@@ -264,6 +270,7 @@ ul {
         margin-top: 20px;
         img {
           cursor: pointer;
+          width: 15px;
         }
       }
       h4 {
@@ -396,6 +403,7 @@ ul {
           }
           .text-area {
             width: 90%;
+            height: 80px;
           }
         }
       }
