--- a/src/pages/web/home/index.scss
+++ b/src/pages/web/home/index.scss
@@ -4,6 +4,12 @@
   }
 }
 
+:deep(.uni-swiper-dot){
+  width: 12px !important;
+  height: 3px;
+  border-radius: 3px;
+}
+
 ::-webkit-scrollbar{
   width:10px;
   height:10px;
@@ -49,7 +55,7 @@
     margin-top: 30px;
   }
   .swiper-box {
-    height: 450px;
+    height: 600px;
     width: 100%;
   }
 
@@ -65,10 +71,11 @@
       right: 10px;
       bottom: 10px;
       color: #ccc;
-      width: 50%;
-      font-size: 16px;
+      width: 100%;
+      font-size: 24px;
       text-align: right;
       padding-right: 20px;
+      padding-bottom: 10px;
     }
   }
 
@@ -296,6 +303,7 @@
         margin-top: 20px;
         img {
           cursor: pointer;
+          width: 15px;
         }
       }
       h4 {
@@ -428,6 +436,7 @@
           }
           .text-area {
             width: 90%;
+            height: 80px;
           }
         }
       }
