--- a/src/pages/mobile/filter-h5/index.scss
+++ b/src/pages/mobile/filter-h5/index.scss
@@ -12,6 +12,7 @@
   .title-container {
     height: 20px;
     line-height: 20px;
+    margin-top: 12px;
     .tar-value {
       color: red;
       font-size: 13px;
