--- a/src/pages/mobile/detail/index.scss
+++ b/src/pages/mobile/detail/index.scss
@@ -47,12 +47,12 @@ ul {
     border-radius: 5px;
     overflow: hidden;
     margin-bottom: 10px;
-    >div{
+    >.div{
       width: 95%;
       margin: 0 auto;
       border-radius: 6px;
       margin-bottom: 10px;
-      background: url("https://uat.cs.cummins.com.cn/doem-h5/static/img/detail-background.png") no-repeat;
+      background: linear-gradient(rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5)),url("https://uat.cs.cummins.com.cn/doem-h5/static/img/detail-background.png") no-repeat;
       background-size: 120% 120%;
       padding-top: 15px;
     }
@@ -420,9 +420,10 @@ ul {
   }
   .footer-btn.fixed {
     position: fixed;
-    bottom: 10px;
+    bottom: 0px;
     width: 90%;
     left: 0;
+    background: #ffffff;
     button {
       font-size: 16px;
     }
