--- a/src/pages/mobile/list-h5/index.scss
+++ b/src/pages/mobile/list-h5/index.scss
@@ -41,7 +41,8 @@
       background: #f5f5f5;
       img{
         position: relative;
-        top: 4px;
+        top: 5px;
+        width: 20px;
       }
     }
   }
@@ -58,6 +59,7 @@
       img {
         position: relative;
         top: 4.5px;
+        width: 20px;
       }
     }
   }
@@ -84,7 +86,8 @@
       }
       .des {
         text-align: center;
-        font-size: 13px;
+        font-size: 16px;
+        font-weight: 700;
         padding-bottom: 10px;
         margin-top: 10px;
       }
