--- a/src/pages/mobile/home/index.scss
+++ b/src/pages/mobile/home/index.scss
@@ -200,28 +200,35 @@
           flex-wrap: wrap;
           flex-direction: row;
           justify-content: space-around;
-          height: 45px;
+          height: 70px;
           border-radius: 8px;
           background: rgba(248, 248, 248, 1);
-          padding: 15px;
+          padding: 15px 0;
           margin-top: 10px;
           .img-box {
             width: 20%;
             .img {
               height: 40px;
               width: 40px;
+              margin-left: 15px;
             }
           }
           .contact-info {
-            width: 30%;
+            width: 50%;
+            .p:last-child {
+              font-size: 12px;
+              color: #666;
+            }
           }
           .contact-btn {
-            width: 50%;
+            width: 30%;
             text-align: right;
+            position: relative;
+            top: 15px;
             .img {
-              width: 44px;
-              height: 44px;
-              margin-right: 20px;
+              width: 40px;
+              height: 40px;
+              margin-right: 10px;
             }
           }
         }
